# func2vec-fse2018-artifact

./: CMakeLists.txt  INSTALL  LICENSE  README.rst  STATUS  requirements.txt  run.sh  runminer.py
docker/: Dockerfile  bashrc  github_deploy_key  github_deploy_key.pub  known_hosts
docker/ansible/: aws.yml  local.yml
docker/ansible/roles/aws/tasks/: main.yml
docker/ansible/roles/clang/tasks/: main.yml
docker/ansible/roles/common/tasks/: main.yml
docker/ansible/roles/ehnfer/meta/: main.yml
docker/ansible/roles/ehnfer/tasks/: main.yml
docker/ansible/roles/idnet/tasks/: main.yml
docker/ansible/roles/jupyter/tasks/: main.yml
docker/ansible/roles/python/tasks/: main.yml
include/: BranchSafety.hpp  Context.hpp  ControlFlow.hpp  FlowGraph.hpp  HandlersPass.hpp  InstructionLabels.hpp  Item.hpp  Llvm.hpp  Location.hpp  Names.hpp  Path.hpp  ReturnValuesPass.hpp  SourceInfo.hpp  Utility.hpp  VarName.hpp  W2VSimpleFn.hpp  W2VSimpleFnICFG.hpp  WrapperFunctions.hpp  edgelist.pb.h  error-codes.h
lib/eclat/apriori/src/: istree.c
lib/eclat/eclat/doc/: eclat.html
lib/eclat/eclat/src/: eclat  eclat.c  eclat.h  eclat.mak  makefile
lib/eclat/tract/src/: clomax.h  fim16.c  makefile  report.c  report.h  tract.h
src/cpp/: Context.cpp  Llvm.cpp  Path.cpp  Utility.cpp  edgelist.pb.cc  getgraph.cpp  pathgen.cpp
src/ehnfer/: __main__.py  association_rule.py  commands.py  default.cfg  eclat.py  handler_db.py  specs_spreadsheet.py
src/ehnfer/test/: test_merge.py
src/golden/: __init__.py  golden.py
src/golden/templates/: clusters.html  golden.html  layout.html  new.html  roc.html  show_entries.html  specs.html
src/passes/: BranchSafety.cpp  ControlFlow.cpp  DefinedFunctions.cpp  ErrorCodeInstructions.cpp  FlatFunctions.cpp  Handlers.cpp  IfStatements.cpp  InstructionLabels.cpp  Names.cpp  ReturnValues.cpp  SourceInfo.cpp  WrapperFunctions.cpp
src/tracegen/: TraceDatabase.cpp  TraceDatabase.hpp  TraceVisitors.cpp  TraceVisitors.hpp  Traces.cpp  Traces.hpp  main.cpp
src/walker/: __main__.py  aws.py  clustering.py  commands.py  config.py  data.py  edgelist_pb2.py  golden.py  metric.py  pushdown.py  topicmodeling.py  visualization.py
tests/: CMakeLists.txt  FullProgramTest.cpp  test.hpp
tests/programs/: bootstrap.c  errpath1.c  errpath2.c  errpath_assign_in_branch.c  errpath_both.c  errpath_early.c  errpath_motivating.c  errpath_multi.c  errpath_return_neither.c  in_loop.c  interesting.txt  invalid_paths.c  loop_after.c  loop_before.c  original.c  recursive.c  stop_chain_at_k.c  struct.c  struct2.c  trivial.c  twocallsites.c
tests/walker/: test_expected.py
tests/walker/expected/: original_intraprocedural.walks  trivial.walks
